fixed object-fit on IE and Edge

--- a/css/blanje.scss
+++ b/css/blanje.scss
@@ -53,6 +53,16 @@ body {
   margin: 0;
 }
 
+.image-cover {
+  object-fit: cover;
+  font-family: "object-fit: cover;";
+}
+
+.image-contain {
+  object-fit: contain;
+  font-family: "object-fit: contain;";
+}
+
 #background {
   background-image: url(../images/background.png);
   background-repeat:no-repeat;
@@ -289,7 +299,6 @@ p {
       position: absolute;
       left: 0;
       display: none;
-      object-fit: cover;
       width: 100%;
       height: 100%;
     }
@@ -405,7 +414,6 @@ p {
         width: 100%;
         height: 100%;
         border: 1px solid rgba(255, 255, 255, 0.3);
-        object-fit: cover;
       }
     }
 
@@ -443,7 +451,7 @@ p {
     top: 0;
     left: 0;
     z-index: 11;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 1);
     display: none;
 
     i {
@@ -499,7 +507,6 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        object-fit: scale-down;
       }
     }
   }
@@ -518,6 +525,7 @@ p {
     width: 100%;
     margin: 0 auto;
     margin-top: 30px;
+    overflow: hidden;
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 30px;
@@ -538,7 +546,7 @@ p {
       flex-wrap: wrap;
       width: 100%;
       display: none;
-      overflow: hidden;
+     
       position: relative;
       
       .container-image {
@@ -553,7 +561,6 @@ p {
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
       }
     }
     
@@ -643,7 +650,6 @@ p {
 
             img {
               position: absolute;
-              object-fit: cover;
               width: 100%;
               height: 100%;
             }
